Version 2.3 - August 24, 2011
-----------------------------
- webapp2.Response.out creates a reference loop that impedes garbage
  collection. Changing it to a property fixed this (Issue #15).
- webapp2_extras.auth:
  - ATTENTION: auth_id is no longer converted to lower case to retrieve
    a key or save a new user in webapp2_extras.appengine.auth.models.User.
    This is a more general approach, as not all systems use case-insensitive
    user ids. If you want case-insensitive auth ids, convert them to lower
    case before passing auth ids to the auth module (Issue #14).
  - If user data is missing attributes, don't raise AssertionError.
    Simply don't save or return a valid session, instead.
  - call user_model.get_id() instead of the ndb-specific user.key.id().
  - removed set_password_validator() and set_token_validator().
    They add complexity to the API without a use case to justify.
    Extend AuthStore to achieve the same thing.

Version 2.2.3 - August 6, 2011
------------------------------
- Version 2.2.2 missed the webapp2_extras.appengine package.

- get_app() and get_request() now test that app and request are set, to avoid
  hard to debug stack traces when they are not and the local proxy is used.


Version 2.2.2 - August 5, 2011 (more 2's than ever!)
----------------------------------------------------
- A default charset is always set in the Request object: if it is not defined
  in the constructor, environ['CONTENT_TYPE'] is checked; and if it is still
  not defined 'utf-8' is used.

- Added token_model as an attribute of the User model; it is used instead of
  the hardcoded class.


Version 2.2.1 - August 1st, 2011
--------------------------------
- Fixed a bug in WSGIApplication.run() when running outside of App Engine:
  CGIHandler().run(app) -> CGIHandler().run(self). (issue 9)


Version 2.2 - July 30, 2011
===========================
- Revised webapp2_extras.auth and simplified User model, by Kyle Finley.
  Thanks!

